# workflow-scripts

./: biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  workflow-scripts.code-workspace
scripts/: build.py
src/: index.ts
src/functions/: package.ts
src/util/: file-utils.ts  result.ts
src/workflow_scripts/: __init__.py  main.py
src/workflow_scripts/commands/: copy_build.py  gui.py  update_build.py
src/workflow_scripts/functions/: file_io.py  package_json.py
src/workflow_scripts/util/: console.py
