[tool.poetry]
name = "rbxts_package_tools"
version = "0.1.0"
description = ""
authors = ["Matt Ashpole <m.d.ashpole@gmail.com>"]
readme = "README.md"
packages = [{ include = "workflow_scripts", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.13,<3.14"
rich = "^13.9.4"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
pytest = "^8.3.3"
pyinstaller = "^6.11.0"

[tool.ruff]
fix = true
unsafe-fixes = false
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "R", "W", "I", "N", "D", "C", "PERF", "FURB", "RUF"]
ignore = ["D417", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D103", "D100", "D104", "D101", "D102"]


[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
indent-style = "space"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
addopts = "--color=yes"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
